<resources>
    <string name="app_name">SolarImportExportTracker</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="txt_add_data">Add</string>
    <string name="txt_account">Account</string>
    <string name="txt_sync">Sync</string>

    <string name="facebook_app_id">691623254993118</string>
    <string name="fb_login_protocol_scheme">fb691623254993118</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="txt_data">Data</string>
    <string name="str_add">Add</string>
    <string name="hi_welcome">Hi, Welcome!</string>
    <string name="header">Track daily Import/Export\nof your Solar Cell</string>
    <string name="tvImport">Import</string>
    <string name="tvExport">Export</string>
    <string name="add_data">Add Data</string>
    <string name="import_title">Import</string>
    <string name="units">Units</string>
    <string name="submit">Submit</string>
    <string name="export">Export</string>
    <string name="date">Date</string>
    <string name="log_out">Log out</string>
    <string name="login_to_sync_your_data_nand_never_worry_to_lost">Login to save and sync your data,\n&amp; never worry to lost it ever!</string>
    <string name="add_some_data_nthen_you_will_see">Add some data,\nthen you will see!</string>
</resources>
